--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <html <head> <link rel="shortcut icon" href="https://sun9-76.userapi.com/s/v1/if2/aY6Qy3bU6K-m56_7GExaE2ssiL5bY552Q67gNatPWXLVk2J8L1cf7kqUkbTf4BVM_dVX-kReYdKtpisN5aPFej1Y.jpg?quality=95&as=32x28,48x42,72x63,108x95,160x140,240x211,360x316,480x421,540x474,640x561,720x632,1080x948,1280x1123&from=bu&cs=1280x0" type="image/x-icon">
-<head>
+<head> <head>
+    ...
+    <link rel="icon" href="https://sun9-76.userapi.com/s/v1/if2/aY6Qy3bU6K-m56_7GExaE2ssiL5bY552Q67gNatPWXLVk2J8L1cf7kqUkbTf4BVM_dVX-kReYdKtpisN5aPFej1Y.jpg?quality=95&as=32x28,48x42,72x63,108x95,160x140,240x211,360x316,480x421,540x474,640x561,720x632,1080x948,1280x1123&from=bu&cs=1280x0" type="image/x-icon">
+    ...
+</head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профессиональный строитель</title>
@@ -260,4 +264,5 @@
     </script>
 </body>
 </html>
+
 `
